copy week api
